[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Buttons/BotãoAceitar.gd" type="Script" id=1]

[node name="BotãoAceitar" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 131.0
margin_top = 169.0
margin_right = 202.0
margin_bottom = 189.0
text = "Aceitar"

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 127.0
margin_top = 172.0
margin_right = 205.0
margin_bottom = 186.0
text = "tarefa aceita !"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
